# Home-automatisation

./: .gitignore  README.md
Backend/LED_Matrix/: LED_Matrix.ino  matrix.h
hardware/: .gitignore  color_effects.cpp  main.cpp  panel.cpp  platformio.ini
hardware/include/: PanelDefinitions.h  letter_mappings.h
hardware/lib/Matrix/: Matrix.cpp
hardware/lib/Panel/: Panel.cpp  Panel.h
hardware/lib/PanelServer/: PanelServer.cpp  PanelServer.h
hardware/lib/Strip/: Strip.cpp  Strip.h
hardware/lib/hardware/panel/: panel.cpp  panel.h
hardware/lib/hardware/panel_client/: panel_client.cpp  panel_client.h
hardware/lib/util/matrix/: matrix.cpp  matrix.h
hardware/src/: PanelAPI.h  PanelEffects.cpp  PanelEffects.h  color_effects.cpp  color_effects.h  main.cpp
hardwareFILES/: color_effects.h  effects.h  snake.h
lib/hardware/panel/: panel.cpp  panel.h
lib/util/matrix/: matrix.cpp  matrix.h
src/: color_effects.cpp  color_effects.h  led_matrix.ino  matrix.cpp  matrix.h  matrix_api.cpp  matrix_api.h
src/LED_Matrix/: LED_Matrix.ino  led_matrix.h  matrix.h  test_matrix.ino
src/arduino/led_room_strip/: effects.h  strip.cpp  strip.h
src/arduino/led_wall/effects/: color_effects.cpp  color_effects.h  interrupt_effects.h
src/arduino/led_wall/matrix_api/: led_matrix.cpp  (+6 more)
src/snake_game/: snake.cpp  snake.h  snake.h.gch
src/webserver/backend/: Cargo.toml  test.txt
webserver/backend/: Cargo.toml  devices.db  index.html
webserver/backend/src/: deviceServer.rs  main.rs  serverUtils.rs  server_utils.rs
webserver/websites/index/: index.html
website/: index.js
(+14 files in other folders)
