[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.1", features=["json"]}
pickledb = "0.4.1"
regex = "1.5.4"
serde = {version="1.0", features=["derive"]}

#[dependencies.rocket_dyn_templates]
#version="0.1.0-rc.1"
#features=["handlebars", "tera"]